[package]
edition = "2021"
name = "gothamjs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.3", default-features = false, features = ["napi8",   "async", "tokio_rt"] }
napi-derive = "2.3.3"
gotham = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
