[package]
name = "path-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
path-tree = "0.2.2"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
js-sys = "0.3.57"
serde = { version = "1.0", features = ["derive"] }
